--- a/src/main/webapp/WEB-INF/views/headerToPublic.jspx
+++ b/src/main/webapp/WEB-INF/views/headerToPublic.jspx
@@ -1,4 +1,4 @@
-<header class="jumbotron subhead" id="overview" 
+<header class="jumbotron masthead" id="overview" 
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
@@ -7,11 +7,11 @@
 	<jsp:output omit-xml-declaration="yes" />
 
 	<center>
-		<spring:url var="banner" value="/resources/images/Logo_SpringRoo.png" />
+		<spring:url var="banner" value="/resources/images/banner-graphic.png" />
 		<spring:url var="home" value="/" />
 		<spring:message code="button_home" var="home_label" htmlEscape="false" />
 		<a href="${home}" name="${fn:escapeXml(home_label)}"
-			title="${fn:escapeXml(home_label)}"><img src="${banner}" />
+			title="${fn:escapeXml(home_label)}"> <img src="${banner}" />
 		</a>
 
 	</center>
