--- a/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/src/main/webapp/WEB-INF/views/menu.jspx
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:menu="urn:jsptagdir:/WEB-INF/tags/menu" id="menu" version="2.0">
-    <jsp:directive.page contentType="text/html;charset=UTF-8"/>
-    <jsp:output omit-xml-declaration="yes"/>
-    <menu:menu id="_menu" z="nZaf43BjUg1iM0v70HJVEsXDopc=">
-        <menu:category id="c_client" z="TjeLu8x0oS98tSiRzdPNDOc8U+c=">
-            <menu:item id="i_client_new" messageCode="global_menu_new" url="/clients?form" z="0rEWYB2Yq6qokJif3zv05zcXpXk="/>
-            <menu:item id="i_client_list" messageCode="global_menu_list" url="/clients?page=1&amp;size=${empty param.size ? 10 : param.size}" z="/DxsyzfFyvp93UEW0WcXvtjs4zo="/>
-        </menu:category>
-    </menu:menu>
-</div>
+
+
+
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:spring="http://www.springframework.org/tags"
+	xmlns:menu="urn:jsptagdir:/WEB-INF/tags/menu" version="2.0">
+	<jsp:directive.page contentType="text/html;charset=UTF-8" />
+	<jsp:output omit-xml-declaration="yes" />
+
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+			
+			
+				<button type="button" class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse">
+					<span class="icon-bar"> <!---->
+					</span> <span class="icon-bar"> <!---->
+					</span> <span class="icon-bar"> <!---->
+					</span>
+				</button>
+				<spring:message code="application_name" var="app_name" 	htmlEscape="false" />
+				<a class="brand" href="./index.html"><spring:message code="welcome_menu" arguments="${app_name}" /></a>
+				<div id="menu" class="nav-collapse in collapse">
+					<menu:menu id="_menu" z="nZaf43BjUg1iM0v70HJVEsXDopc=">
+						<menu:category id="c_client" z="TjeLu8x0oS98tSiRzdPNDOc8U+c=">
+							<menu:item id="i_client_new" messageCode="global_menu_new"
+								url="/clients?form" z="0rEWYB2Yq6qokJif3zv05zcXpXk=" />
+							<menu:item id="i_client_list" messageCode="global_menu_list"
+								url="/clients?page=1&amp;size=${empty param.size ? 10 : param.size}"
+								z="/DxsyzfFyvp93UEW0WcXvtjs4zo=" />
+						</menu:category>
+					</menu:menu>
+					
+					
+					
+					
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</jsp:root>
